--- a/BootMVCWorldLeaders/src/main/webapp/css/myStyles.css
+++ b/BootMVCWorldLeaders/src/main/webapp/css/myStyles.css
@@ -49,3 +49,55 @@ h1 {
 	font-family: 'Arvo';
 	margin: 0;
 }
+
+.container {
+	background-color: #f4511e;
+	color: #ffffff;
+}
+
+.card {
+	text-align: center;
+	font-family: 'Arvo';
+	width: 100%;
+	border-radius: 20px;
+	margin: 8px 0;
+	outline: none;
+	padding: 0px;
+	box-sizing: border-box;
+}
+
+#dropdownMenuButton{
+	text-align: center;
+	font-family: 'Arvo';
+	width: 100%;
+	border: 2px solid #aaa;
+	border-radius: 4px;
+	margin: 8px 0;
+	outline: none;
+	padding: 8px;
+	box-sizing: border-box;
+}
+
+.card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    background-color: #343a40;
+    border-radius: 20px;
+}
+
+.card-title {
+    margin-bottom: .75rem;
+    color: white;
+    
+}
+
+.jumbotron {
+  color: white;
+  background-image: url("https://cdn.suwalls.com/wallpapers/movies/pulp-fiction-32423-2560x1440.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
